# audio-text_to_speech

text_to_speech_azure/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  _text_to_speech_azure_vs12.vcxproj  aaa__library.h  deployment.rc  framework.cpp  nord_text_to_speech_azure.vcxproj  speaker.cpp  speaker.h  text_to_speech_azure.cbp  text_to_speech_azure.def  text_to_speech_azure.vcxproj  text_to_speech_azure.vcxproj.filters  u_text_to_speech_azure.vcxproj  u_text_to_speech_azure.vcxproj.filters
text_to_speech_azure/text_to_speech_azure.xcodeproj/: project.pbxproj
text_to_speech_google/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  aaa__library.h  deployment.rc  framework.cpp  nord_text_to_speech_google.vcxproj  nord_text_to_speech_google.vcxproj.filters  speaker.cpp  speaker.h  text_to_speech_google.cbp  text_to_speech_google.def  text_to_speech_google.vcxproj  text_to_speech_google.vcxproj.filters  u_text_to_speech_google.vcxproj  u_text_to_speech_google.vcxproj.filters
text_to_speech_google/text_to_speech_google.xcodeproj/: project.pbxproj
text_to_speech_sapi/: CMakeLists.txt  _.cpp  _.h  _extensions.txt  _factory.cpp  _references.txt  deployment.rc  framework.cpp  speaker.cpp  speaker.h  text_to_speech_sapi.def  text_to_speech_sapi.vcxproj
text_to_speech_speech_synthesis/: CMakeLists.txt  _.h  _factory.cpp  aaa__library.h  deployment.rc  speaker.cpp  speaker.h  text_to_speech_sapi.vcxproj  text_to_speech_sapi.vcxproj.filters  u_text_to_speech_speech_synthesis.sln  u_text_to_speech_speech_synthesis.vcxproj  u_text_to_speech_speech_synthesis.vcxproj.filters  u_text_to_speech_speech_synthesis1.vcxproj  u_text_to_speech_speech_synthesis1.vcxproj.filters
text_to_speech_streamelements/: CMakeLists.txt  _.h  _factory.cpp  aaa__library.h  deployment.rc  speaker.cpp  speaker.h  text_to_speech_streamelements.def  text_to_speech_streamelements.vcxproj  text_to_speech_streamelements.vcxproj.filters
text_to_speech_streamelements/text_to_speech_streamelements.xcodeproj/: project.pbxproj
user_text_to_speech/: CMakeLists.txt  _.h  _factory.cpp  _user_text_to_speech.h  deployment.rc  form_handler.cpp  form_handler.h  framework.h  nord_user_text_to_speech.vcxproj  nord_user_text_to_speech.vcxproj.filters  u_user_text_to_speech.def  u_user_text_to_speech.vcxproj  u_user_text_to_speech.vcxproj.filters  user_text_to_speech.cbp  user_text_to_speech.sln  user_text_to_speech.vcxproj  user_text_to_speech.vcxproj.filters
user_text_to_speech/user_text_to_speech.xcodeproj/: project.pbxproj
